Updated CSS to make it responsive and fixed some layout issues.

--- a/style.css
+++ b/style.css
@@ -40,6 +40,9 @@ body {
     align-items: center;
     font-family: "Poppins", sans-serif;
     color: hsl(229, 6%, 66%);
+    gap: 20px;
+    font-size: 15px;
+    background-color: hsl(0, 0%, 98%);
 }
 
 img,
@@ -78,16 +81,19 @@ h6 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 500px;
+    text-align: center;
+    justify-content: center;
+    padding: 30px;
 }
 
 .section {
     width: 250px;
-    box-shadow: 5px 5px gray;
-    border: 2px solid hsl(234, 12%, 34%);
-    height: 180px;
+    box-shadow: 5px 10px 8px hsl(212, 29%, 90%);
+    height: 170px;
     display: flex;
     flex-direction: column;
-    border-radius: 1rem;
+    border-radius: 0.2rem;
     padding: 20px;
 }
 
@@ -106,27 +112,64 @@ h6 {
     width: 50px;
     height: 50px;
     align-self: flex-end;
+    margin-bottom: 0px;
+}
+
+.icon-flex {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-grow: 1;
 }
 
 #four-cards {
     display: grid;
     grid-template-rows: repeat(4, 1fr);
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    grid-gap: 20px;
 }
 
 #supervisor {
     grid-area: 2/1/4/2;
+    border-top: 4px solid hsl(180, 62%, 55%);
 }
 
 #team-builder {
     grid-area: 1/2/3/3;
+    border-top: 4px solid hsl(0, 78%, 62%);
 }
 
 #karma {
     grid-area: 3/2/5/3;
+    border-top: 4px solid hsl(34, 97%, 64%);
 }
 
 #calculator {
     grid-area: 2/3/4/4;
+    border-top: 4px solid hsl(212, 86%, 64%);
+}
+
+@media (max-width: 900px) {
+    #four-cards {
+        grid-template-rows: repeat(4, 1fr);
+        grid-template-columns: 100%;
+    }
+    #supervisor {
+        grid-area: 1/1/2/2;
+    }
+    #team-builder {
+        grid-area: 2/1/3/2;
+    }
+    #karma {
+        grid-area: 3/1/4/2;
+    }
+    #calculator {
+        grid-area: 4/1/5/2;
+    }
+    #top-section {
+        width: 320px;
+    }
+    h1 {
+        font-size: 1.4rem;
+    }
 }
